# workspace

./: Characters.cpp  LICENSE  Matrix.cpp  NWD.c  Queue.cpp  SeaBattle_Board.cpp  calculator.py  calendar.py  count_set_bits.cpp  getline.c  ilosc_liczb.py  include-trick.c  interpolate.py  isNumber.html  novaPDF_combine_files.py  novaPDF_split_files.py  opticalFiber.html  plot1.py  pseudo-object.c  safe-MallocFree.c  simple-multitasking.c  stack_pointers.c  tree.cpp  waveCalculator.js  x-macro.c
VBA/: excel_force_enable_macros.vba  macros_links.txt
avr/: LEDFlash.c  button.c  leds.c
avr/led_display/: main.c
avr/led_display/display_led/: dled.c  dled.h
editors/sublimetext3/: README.TXT
editors/sublimetext3/User/: Guna.sublime-settings  Preferences.sublime-settings  Terminal.sublime-settings  auto_save.sublime-settings
editors/vscode/: README.TXT  settings.json
editors/vscode_portable_cpp/: code_start.cmd  instruction.txt  run_program.cmd
go/: exercise-errors.go  exercise-fibonacci-closure.go  exercise-loops-and-functions.go  exercise-maps.go  exercise-readers.go  exercise-slices.go  exercise-stringers.go
gui/: CMakeLists.txt
gui/source/: about.h  detect_os.h  macros.h  main.c  types.h
gui/source/files/: icon.h
gui/source/files/windows/: exe_data.rc
gui/source/graphics/: display.c  display.h
gui/source/graphics/gui/: gui.c  gui.h  gui_colors.h  gui_elements.c  gui_elements.h  misc.c  misc.h
gui/source/graphics/gui/layouts/main/: gui_layouts_main.c  gui_layouts_main.h
gui/source/network/: update_checker.c  update_checker.h
gui/source/system/: common.c  common.h  config.c  config.h  engine.c  engine.h  generic_structures.c  generic_structures.h  misc.c  misc.h  onewaylist.c  onewaylist.h
gui/source/system/autoit3/: autoit3.h  autoit3mingw.c
gui/tools/bin2header/: main.c
linked_list/: main.c  onewaylist.c  onewaylist.h
nwd/: nwd.html  nwd.js
pie_chart/: CMakeLists.txt  main.c
pie_chart/canvasimg/: canvasimg.c  canvasimg.h  tsimple.h
vscode_portable_cpp/: instruction.txt  skeleton.cmd  vscode_config.txt
